изменение во вкадке html css

--- a/index.html
+++ b/index.html
@@ -7,27 +7,34 @@
 	<link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
 <body>
-	<header class="header">
+<header class="header">
+<div class="container">
  <div class="header-information">
   <div class="header-communication"> 
-   <div class="logo">
+   <div class="panel-logo">
     <a href="/">
     <img src="svg/noemi-logo.svg" class="logo" alt="логотип">
     </a>
    </div>
-    <nav class="menu">
+    <nav class="nav menu">
+      <button class="nav-button menu-button">
+        <span class="menu-button-label">Открыть меню</span>
+      </button>
       <ul class="menu-list">
-          <li><a href="/" class="menu-list-item">главная</a></li>
-          <li><a href="/" class="menu-list-item">посты</a></li>
-          <li><a href="/" class="menu-list-item">статьи</a></li>
-          <li><a href="/" class="menu-list-item">теги</a></li>
-          <li><a href="/" class="menu-list-item">темы</a></li>
-          <li><a href="/" class="menu-list-item">контакты</a></li>
+          <li class="nav-item"><a href="/" class="menu-list-item">главная</a></li>
+          <li class="nav-item"><a href="/" class="menu-list-item">посты</a></li>
+          <li class="nav-item"><a href="/" class="menu-list-item">статьи</a></li>
+          <li class="nav-item"><a href="/" class="menu-list-item">теги</a></li>
+          <li class="nav-item"><a href="/" class="menu-list-item">темы</a></li>
+          <li class="nav-item"><a href="/" class="menu-list-item">контакты</a></li>
       </ul>
      </nav> 
-    </div>  
+  </div>
+  <div class="header-welcome">
    <h1 class="first-heading">блог о творчестве,спорте, и образе жизни</h1> 
- </div> 
+ </div>
+ </div>
+</div> 
 </header>
 
 <div class="pagination">
